# idax

./: CMakeLists.txt  README.md  build.sh
.agents/: active_work.md  api_catalog.md  decision_log.md  findings.md  knowledge_base.md  progress_ledger.md  roadmap.md
.github/workflows/: bindings-ci.yml
bindings/node/: CMakeLists.txt  README.md  agents.md  package-lock.json  package.json
bindings/node/lib/: index.d.ts  index.js
bindings/node/src/: addon.cpp  database_bind.cpp  decompiler_bind.cpp  entry_bind.cpp  function_bind.cpp  helpers.hpp  path_bind.cpp  type_bind.cpp  ui_bind.cpp
bindings/node/test/: integration.test.js  unit.test.js
bindings/python/: CMakeLists.txt  README.md  pyproject.toml
bindings/python/examples/: binary_forensics.py  change_tracker.py  class_reconstructor.py  complexity_metrics.py  ida2py_port.py  idalib_dump_port.py  idalib_lumina_port.py  sink_tracer.py
bindings/python/python/idax/: __init__.py  __init__.pyi  _idax.pyi
bindings/python/src/: address_bind.cpp  analysis_bind.cpp  comment_bind.cpp  data_bind.cpp  database_bind.cpp  decompiler_bind.cpp  diagnostics_bind.cpp  entry_bind.cpp  event_bind.cpp  fixup_bind.cpp  function_bind.cpp  helpers.hpp  instruction_bind.cpp  lines_bind.cpp  lumina_bind.cpp  module.cpp  name_bind.cpp  search_bind.cpp  segment_bind.cpp  storage_bind.cpp  type_bind.cpp  xref_bind.cpp
bindings/python/tests/: conftest.py  test_integration.py  test_unit.py
bindings/rust/idax/: README.md
bindings/rust/idax-sys/: README.md  build.rs
bindings/rust/idax-sys/shim/: idax_shim.cpp  idax_shim.h
bindings/rust/idax-sys/src/: bindings.rs
bindings/rust/idax/examples/: abyss_port_plugin.rs  action_plugin.rs  advanced_loader.rs  advanced_procmod.rs  decompiler_plugin.rs  deep_analysis_plugin.rs  driverbuddy_port_plugin.rs  event_monitor_plugin.rs  ida2py_port.rs  ida_names_port_plugin.rs  idalib_dump_port.rs  idalib_lumina_port.rs  idapcode_headless_port.rs  jbc_full_loader.rs  jbc_full_procmod.rs  lifter_headless_port.rs  minimal_loader.rs  qtform_renderer_plugin.rs  storage_metadata_plugin.rs
bindings/rust/idax/examples/common/: mod.rs
bindings/rust/idax/src/: database.rs  debugger.rs  decompiler.rs  event.rs  function.rs  graph.rs  lib.rs  lines.rs  loader.rs  path.rs  plugin.rs  tests.rs  types.rs  ui.rs
bindings/rust/idax/tests/: integration.rs
docs/: api_reference.md  codedump_host_evidence.md  codedump_migration_checklist.md  codedump_parity_tasks.md  example_port_mapping_bindings.md  namespace_topology.md  sdk_domain_coverage_matrix.md  validation_report.md
docs/quickstart/: plugin.md
examples/: CMakeLists.txt  README.md
examples/loader/: sep_firmware_loader.cpp
examples/plugin/: abyss_port_plugin.cpp  codedump_parity_probe_plugin.cpp  drawida_port_bridge.hpp  drawida_port_plugin.cpp  drawida_port_widget.cpp  qtform_renderer_bridge.hpp  qtform_renderer_plugin.cpp  qtform_renderer_widget.cpp
examples/tools/: ida2py_port.cpp  idalib_dump_port.cpp
include/ida/: database.hpp  decompiler.hpp  function.hpp  graph.hpp  idax.hpp  instruction.hpp  path.hpp  plugin.hpp  type.hpp  ui.hpp
scripts/: check_codedump_parity_evidence_log.sh  run_codedump_parity_host_gates.sh  run_codedump_parity_local_validation.sh
src/: database.cpp  decompiler.cpp  function.cpp  graph.cpp  instruction.cpp  loader.cpp  path.cpp  plugin.cpp  type.cpp  ui.cpp
src/detail/: qt_clipboard_bridge.cpp  qt_clipboard_bridge.hpp
tests/fixtures/: simple_appcall_linux64.i64  simple_appcall_linux64.id0  simple_appcall_linux64.id1  simple_appcall_linux64.id2  simple_appcall_linux64.nam  simple_appcall_linux64.til
tests/integration/: CMakeLists.txt  codedump_parity_host_gates_test.cpp  decompiler_storage_hardening_test.cpp  loader_processor_scenario_test.cpp  segment_function_edge_cases_test.cpp  smoke_test.cpp  type_roundtrip_test.cpp
tests/unit/: api_surface_parity_test.cpp  core_unit_test.cpp
