cmake_minimum_required(VERSION 3.27)
project(idax VERSION 0.1.0 LANGUAGES CXX)

# ── Vendored Dependencies ────────────────────────────────────────────────
if(NOT DEFINED ENV{IDASDK} OR "$ENV{IDASDK}" STREQUAL "")
    message(STATUS "IDASDK not set in environment, fetching ida-sdk via FetchContent...")
    include(FetchContent)
    
    FetchContent_Declare(
        ida_sdk
        GIT_REPOSITORY https://github.com/HexRaysSA/ida-sdk.git
        GIT_TAG        main
        GIT_SHALLOW    TRUE
        GIT_SUBMODULES_RECURSE TRUE
    )
    
    # We use Populate directly because ida-sdk has no root CMakeLists.txt.
    # To suppress CMP0169 warning on newer CMake versions:
    if(POLICY CMP0169)
        cmake_policy(SET CMP0169 OLD)
    endif()
    
    FetchContent_GetProperties(ida_sdk)
    if(NOT ida_sdk_POPULATED)
        FetchContent_Populate(ida_sdk)
    endif()
    
    set(ENV{IDASDK} "${ida_sdk_SOURCE_DIR}")
endif()

# ── Bootstrap ida-cmake ──────────────────────────────────────────────────
# IDASDK may point either to an SDK root that contains `ida-cmake/`, or to
# a GitHub checkout root where SDK contents live under `src/`.
set(IDASDK_BOOTSTRAP_ROOT "$ENV{IDASDK}")

if(NOT IDASDK_BOOTSTRAP_ROOT)
    message(FATAL_ERROR "IDASDK is not set. Set IDASDK to your IDA SDK path.")
endif()

if(EXISTS "${IDASDK_BOOTSTRAP_ROOT}/ida-cmake/bootstrap.cmake")
    set(IDASDK_BOOTSTRAP_FILE "${IDASDK_BOOTSTRAP_ROOT}/ida-cmake/bootstrap.cmake")
elseif(EXISTS "${IDASDK_BOOTSTRAP_ROOT}/cmake/bootstrap.cmake")
    set(IDASDK_BOOTSTRAP_FILE "${IDASDK_BOOTSTRAP_ROOT}/cmake/bootstrap.cmake")
elseif(EXISTS "${IDASDK_BOOTSTRAP_ROOT}/src/ida-cmake/bootstrap.cmake")
    set(IDASDK_BOOTSTRAP_ROOT "${IDASDK_BOOTSTRAP_ROOT}/src")
    set(IDASDK_BOOTSTRAP_FILE "${IDASDK_BOOTSTRAP_ROOT}/ida-cmake/bootstrap.cmake")
elseif(EXISTS "${IDASDK_BOOTSTRAP_ROOT}/src/cmake/bootstrap.cmake")
    set(IDASDK_BOOTSTRAP_ROOT "${IDASDK_BOOTSTRAP_ROOT}/src")
    set(IDASDK_BOOTSTRAP_FILE "${IDASDK_BOOTSTRAP_ROOT}/cmake/bootstrap.cmake")
else()
    message(FATAL_ERROR
        "Could not find ida-cmake bootstrap under IDASDK='${IDASDK_BOOTSTRAP_ROOT}'.\n"
        "Expected one of:\n"
        "  ${IDASDK_BOOTSTRAP_ROOT}/ida-cmake/bootstrap.cmake\n"
        "  ${IDASDK_BOOTSTRAP_ROOT}/cmake/bootstrap.cmake\n"
        "  ${IDASDK_BOOTSTRAP_ROOT}/src/ida-cmake/bootstrap.cmake\n"
        "  ${IDASDK_BOOTSTRAP_ROOT}/src/cmake/bootstrap.cmake")
endif()

set(ENV{IDASDK} "${IDASDK_BOOTSTRAP_ROOT}")
include("${IDASDK_BOOTSTRAP_FILE}")

# Set IDABIN to build artifacts in a local idax folder instead of vendored ida-sdk
if(NOT DEFINED IDABIN)
    set(IDABIN "${CMAKE_CURRENT_BINARY_DIR}/idabin" CACHE PATH "Output directory for IDA artifacts")
    message(STATUS "Setting IDABIN to local build folder: ${IDABIN}")
endif()

find_package(idasdk REQUIRED)

# Promote idasdk targets to GLOBAL scope so that parent projects including idax
# via FetchContent or add_subdirectory can link against them.
foreach(_ida_target idasdk::plugin idasdk::loader idasdk::procmod idasdk::idalib)
    if(TARGET ${_ida_target})
        set_target_properties(${_ida_target} PROPERTIES IMPORTED_GLOBAL TRUE)
    endif()
endforeach()

# When idax is included via FetchContent or add_subdirectory, the MSVC CRT
# flags set by ida-cmake are local to the idax directory scope.
# We must propagate CMAKE_MSVC_RUNTIME_LIBRARY to the parent scope so that
# plugins defined by the user in the parent directory link against the same CRT.
if(MSVC AND DEFINED CMAKE_MSVC_RUNTIME_LIBRARY)
    set(CMAKE_MSVC_RUNTIME_LIBRARY "${CMAKE_MSVC_RUNTIME_LIBRARY}" PARENT_SCOPE)
endif()

if(DEFINED IDASDK AND EXISTS "${IDASDK}/include")
    set(IDAX_SDK_ROOT "${IDASDK}")
elseif(EXISTS "$ENV{IDASDK}/include")
    set(IDAX_SDK_ROOT "$ENV{IDASDK}")
else()
    message(FATAL_ERROR
        "Could not resolve SDK include directory after bootstrap.\n"
        "IDASDK='${IDASDK}', ENV{IDASDK}='$ENV{IDASDK}'.")
endif()

# ── C++23 standard for idax itself ───────────────────────────────────────
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)


# ── Collect sources ──────────────────────────────────────────────────────
file(GLOB_RECURSE IDAX_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

# ── SDK headers-only target for compilation ──────────────────────────────
# idax needs the SDK headers and __EA64__ to compile, but does NOT
# propagate a specific link target (plugin/loader/idalib) to consumers.
# Consumers must link their own idasdk::plugin, idasdk::idalib, etc.
if(NOT TARGET idasdk_headers)
    add_library(idasdk_headers INTERFACE IMPORTED)
    set_target_properties(idasdk_headers PROPERTIES
        INTERFACE_INCLUDE_DIRECTORIES "${IDAX_SDK_ROOT}/include"
    )
    target_compile_definitions(idasdk_headers INTERFACE __EA64__)
    target_link_libraries(idasdk_headers INTERFACE
        ida_platform_settings
        ida_compiler_settings)
endif()

# Strip -flto from ida_compiler_settings so it doesn't propagate into idax
# or any downstream consumers (e.g. Rust crates linking the static archive).
if(TARGET ida_compiler_settings)
    get_target_property(_ics_opts ida_compiler_settings INTERFACE_COMPILE_OPTIONS)
    if(_ics_opts)
        list(FILTER _ics_opts EXCLUDE REGEX "-flto")
        set_property(TARGET ida_compiler_settings PROPERTY INTERFACE_COMPILE_OPTIONS "${_ics_opts}")
    endif()
endif()

# ── idax static library ─────────────────────────────────────────────────
# Built as a static library that IDA addons link against alongside idasdk::*
add_library(idax STATIC ${IDAX_SOURCES})
add_library(idax::idax ALIAS idax)

target_include_directories(idax
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:include>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/src
)

# idax compiles against SDK headers but does NOT force a link target.
# Consumers bring their own idasdk::plugin / idasdk::idalib / etc.
target_link_libraries(idax PUBLIC idasdk_headers)

# Qt clipboard support is opt-in because enabling it makes the static idax
# archive carry Qt symbols into downstream plugin/addon links. IDA requires
# a Qt build configured with QT_NAMESPACE=QT; using the host system Qt can
# compile but will fail or misbehave once linked against IDA.
option(IDAX_ENABLE_QT_CLIPBOARD "Enable Qt-backed ida::ui clipboard helpers" OFF)
set(IDAX_QT6_DIR "" CACHE PATH "Qt6 CMake package directory built with QT_NAMESPACE=QT for IDA")
if(IDAX_ENABLE_QT_CLIPBOARD)
    if(IDAX_QT6_DIR)
        set(Qt6_DIR "${IDAX_QT6_DIR}" CACHE PATH "Qt6 CMake package directory" FORCE)
    endif()

    find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)

    get_target_property(_idax_qt_core_defs Qt6::Core INTERFACE_COMPILE_DEFINITIONS)
    if(NOT _idax_qt_core_defs)
        set(_idax_qt_core_defs "")
    endif()
    if(NOT _idax_qt_core_defs MATCHES "(^|;)QT_NAMESPACE=QT(;|$)")
        message(FATAL_ERROR
            "IDAX_ENABLE_QT_CLIPBOARD requires an IDA-compatible Qt6 build "
            "configured with QT_NAMESPACE=QT. Build the SDK-provided Qt with "
            "`cmake --build ${CMAKE_BINARY_DIR} --target build_qt`, then "
            "reconfigure with `-DIDAX_QT6_DIR=${QT_INSTALL_PREFIX}/lib/cmake/Qt6`, "
            "or set Qt6_DIR to that package directory.")
    endif()

    target_link_libraries(idax PUBLIC Qt6::Core Qt6::Gui Qt6::Widgets)
    target_compile_definitions(idax PRIVATE IDAX_HAVE_QT_CLIPBOARD=1)
else()
    target_compile_definitions(idax PRIVATE IDAX_HAVE_QT_CLIPBOARD=0)
endif()

# C++23 for idax consumers
target_compile_features(idax PUBLIC cxx_std_23)

# Platform-specific compile options
if(MSVC)
    target_compile_options(idax PRIVATE /W4 /permissive- /Zc:__cplusplus)
else()
    target_compile_options(idax PRIVATE -Wall -Wextra -Wpedantic)
endif()

# Disable LTO natively for the idax static library itself.
set_property(TARGET idax PROPERTY INTERPROCEDURAL_OPTIMIZATION FALSE)

# ── Examples (optional) ──────────────────────────────────────────────────
option(IDAX_BUILD_EXAMPLES "Build idax example addons" OFF)
if(IDAX_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()

# ── Tests (optional) ────────────────────────────────────────────────────
option(IDAX_BUILD_TESTS "Build idax tests" OFF)
if(IDAX_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

# ── Install / packaging ──────────────────────────────────────────────────
include(GNUInstallDirs)

install(TARGETS idax
    EXPORT idaxTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

install(DIRECTORY include/
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(FILES
    docs/api_reference.md
    docs/tutorial/first_contact.md
    DESTINATION ${CMAKE_INSTALL_DATADIR}/idax/docs
    OPTIONAL
)

install(EXPORT idaxTargets
    FILE idaxTargets.cmake
    NAMESPACE idax::
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/idax
)

include(CMakePackageConfigHelpers)

configure_package_config_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/idaxConfig.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/idaxConfig.cmake"
    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/idax
)

write_basic_package_version_file(
    "${CMAKE_CURRENT_BINARY_DIR}/idaxConfigVersion.cmake"
    VERSION ${PROJECT_VERSION}
    COMPATIBILITY SameMajorVersion
)

install(FILES
    "${CMAKE_CURRENT_BINARY_DIR}/idaxConfig.cmake"
    "${CMAKE_CURRENT_BINARY_DIR}/idaxConfigVersion.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/idax
)

# ── CPack ────────────────────────────────────────────────────────────────
set(CPACK_PACKAGE_NAME "idax")
set(CPACK_PACKAGE_VENDOR "idax")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_FILE_NAME "idax-${PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}")
set(CPACK_GENERATOR "TGZ")
include(CPack)
