[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "idax"
version = "0.1.0"
description = "Python bindings for the IDA SDK via idax"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Development Status :: 3 - Alpha",
]

[tool.scikit-build]
wheel.packages = ["python/idax"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
